# charm-ubuntu

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  artifacts.yaml  charmcraft.yaml  concierge-juju4.yaml  concierge.yaml  config.yaml  copyright  layer.yaml  metadata.yaml  pyproject.toml  requirements.txt  spread.yaml  tox.ini
.github/: .sbomber-manifest.yaml  check-conventional-pr-title.py  concierge-pack.yaml  dependabot.yaml  dependabot.yml
.github/workflows/: ci.yaml  dependency-review.yaml  integration-test.yaml  promote.yaml  publish-edge.yaml  publish.yaml  sbom-secscan.yaml  security.yaml  spread.yaml  tests.yml  tiobe.yaml  zizmor.yaml
reactive/: ubuntu.py
src/: charm.py
tests/: 010_basic_precise  015_basic_trusty  025_basic_wily  030_basic_xenial  035_basic_artful  035_basic_bionic  basic_deployment.py  tests.yaml
tests/data/: model-config.yaml
tests/integration/: conftest.py  test_charm.py
tests/setup/: 00-setup.sh
tests/spread/: cloud-config.yaml
tests/spread/integration/deploy-charm/: task.yaml
tests/spread/integration/ubuntu-18.04/: task.yaml
tests/spread/integration/ubuntu-20.04/: task.yaml
tests/spread/integration/ubuntu-22.04/: task.yaml
tests/spread/integration/ubuntu-24.04/: task.yaml
tests/spread/integration/ubuntu-26.04/: task.yaml
tests/spread/unit/charm/: task.yaml
tests/unit/: test_charm.py
